# Common_core

./: .gitignore  Appunti funzioni C  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalpha.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_memcmp.c  ft_memcpy.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h  libft.h.gch  main.c  makefile  testoh.txt  upd.sh
42xunifi-structured-development-2025-alerusso/: README.md
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/: CMakeLists.txt
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/Libft/: ft_striteri.c  libft.h  other_trim_only.c
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/daft_src/: daft_utils_debug.c  header.h
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/includes/: daft.h  func.h  lib.h  macros.h  pacman.h
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/includes/media/: maps.h
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/srcs/: main.c
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/srcs/SDL/: init.c  input.c  loop.c
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/srcs/debug/: map.c
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/srcs/engine/: animations.c  map_render.c
Archivio/progetti/PACMAN/android-project/app/src/main/cpp/srcs/utils/: math.c  set_entity.c  time.c
Libft (bonus_3par)/: Makefile  (+7 more)
(+2716 files in other folders)
